# qruster

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Caddyfile.example  LICENSE  PLAN.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/extractors/: bilibili.rs  bluesky.rs  dailymotion.rs  facebook.rs  generic.rs  instagram.rs  loom.rs  mod.rs  newgrounds.rs  odnoklassniki.rs  pinterest.rs  platforms.rs  reddit.rs  rutube.rs  snapchat.rs  soundcloud.rs  streamable.rs  tiktok.rs  tumblr.rs  twitch.rs  twitter.rs  vimeo.rs  vk.rs  youtube.rs
backend/src/handlers/: download.rs  extract.rs  formats.rs  mod.rs
backend/src/services/: downloader.rs  mod.rs  ytdlp.rs
docs/: .gitignore  README.md  book.toml  docusaurus.config.ts  package-lock.json  package.json  sidebars.ru.ts  sidebars.ts
docs-old/: book.toml
docs-old/src/en/: concept.md  (+4 more)
docs/docs/: api.md  architecture.md  concept.md  development.md  installation.md  intro.md  platforms.md  usage.md
docs/patches/: webpackbar+6.0.0.patch
docs/plugins/: disable-webpackbar.js
docs/ru-docs/: api.md  architecture.md  development.md  installation.md  usage.md
docs/src/: README.md  SUMMARY.md
docs/theme/: custom.css  custom.js
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: run.bat  run.sh  setup.bat  setup.sh
(+19 files in other folders)
